WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
8016
REPRO: Safari hangs loading 18 MB page (deeply nested DOM tree)
https://bugs.webkit.org/show_bug.cgi?id=8016
Summary
REPRO: Safari hangs loading 18 MB page (deeply nested DOM tree)
Eric Seidel (no email)
Reported
2006-03-27 14:38:48 PST
Safari hangs loading large page
http://www.ronniebowman.com/guestbook.html
Attachments
Sample
(446.49 KB, text/plain)
2006-03-27 14:39 PST
,
Eric Seidel (no email)
no flags
Details
Test case
(89 bytes, text/html)
2007-02-20 01:26 PST
,
Andrew Wellington
no flags
Details
Make "<" terminate tag and attribute names
(146.46 KB, patch)
2007-03-30 10:22 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2006-03-27 14:39:11 PST
Created
attachment 7341
[details]
Sample
Alice Liu
Comment 2
2006-05-16 09:48:21 PDT
<
rdar://problem/4549742
>
Darin Adler
Comment 3
2006-06-04 11:44:19 PDT
The problem here is that this page ends up creating a deeply nested DOM tree. So anything that's n^2 for the depth of the DOM tree ends up killing us here. The time is mostly spent in rendering code. We should see what we can do to make the rendering speed linear here. Or we could figure out why the tree ends up so deeply nested -- not sure that it does in other browsers.
Darin Adler
Comment 4
2006-06-04 11:46:17 PDT
The reason this does not hang in Firefox is that Gecko produces a relatively flat DOM tree, while we produce a deeply nested one, for this HTML. So I suppose we should consider this an HTML parser bug. Accordingly, moving to the HTML DOM component.
Andrew Wellington
Comment 5
2007-02-20 01:26:47 PST
Created
attachment 13272
[details]
Test case This piece of broken HTML from the page shows the difference between the DOM tree WebKit and Gecko generate for this bug.
mitz
Comment 6
2007-03-30 10:22:47 PDT
Created
attachment 13888
[details]
Make "<" terminate tag and attribute names
mitz
Comment 7
2007-03-30 10:24:31 PDT
I think there are a couple of duplicates of this bug in bugzilla.
Darin Adler
Comment 8
2007-03-30 10:25:46 PDT
Comment on
attachment 13888
[details]
Make "<" terminate tag and attribute names r=me
Alexey Proskuryakov
Comment 9
2007-03-31 01:07:42 PDT
Committed revision 20634. I didn't search for Bugzilla duplicates, as I don't remember any, even vaguely.
David Kilzer (:ddkilzer)
Comment 10
2007-03-31 05:01:05 PDT
(In reply to
comment #9
)
> I didn't search for Bugzilla duplicates, as I don't remember any, even vaguely.
Mitz, were you thinking of the missing </title> tag (
Bug 3905
) or missing </script> tag (
Bug 9370
) bugs?
mitz
Comment 11
2007-03-31 05:08:36 PDT
(In reply to
comment #10
)
> (In reply to
comment #9
) > > I didn't search for Bugzilla duplicates, as I don't remember any, even vaguely. > > Mitz, were you thinking of the missing </title> tag (
Bug 3905
) or missing > </script> tag (
Bug 9370
) bugs? >
No... I recall them involving <a> tags. Maybe I'm remembering wrong :c)
Alexey Proskuryakov
Comment 12
2007-04-03 06:53:43 PDT
***
Bug 6393
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug