2007-03-31  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=8016
          REPRO: Safari hangs loading 18 MB page (deeply nested DOM tree)

WebCore:
        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::parseTag): Made "<" terminate tag and attribute
        names. This matches Firefox.

LayoutTests:
        * fast/overflow/002-expected.checksum:
        * fast/overflow/002-expected.png:
        * fast/overflow/002-expected.txt:
        * fast/overflow/002.html: Added missing ">" to one of the BR tags.
        * fast/text/atsui-multiple-renderers-expected.checksum:
        * fast/text/atsui-multiple-renderers-expected.png:
        * fast/text/atsui-multiple-renderers-expected.txt:
        * fast/text/atsui-multiple-renderers.html: Added missing ">" to the TITLE tag.
        * fast/tokenizer/lessthan-terminates-tags-and-attrs-expected.txt: Added.
        * fast/tokenizer/lessthan-terminates-tags-and-attrs.html: Added.



Canonical link: https://commits.webkit.org/17313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20634 268f45cc-cd09-0410-ab3c-d52691b4dbfc