WebCore/html/HTMLTokenizer.cpp
@@ -869,10 +869,10 @@ HTMLTokenizer::State HTMLTokenizer::parseTag(SegmentedString &src, State state)
             }
 
             bool finish = false;
-            unsigned int ll = min(src.length(), CBUFLEN-cBufferPos);
-            while(ll--) {
+            unsigned int ll = min(src.length(), CBUFLEN - cBufferPos);
+            while (ll--) {
                 UChar curchar = *src;
-                if(curchar <= ' ' || curchar == '>' ) {
+                if (curchar <= ' ' || curchar == '>' || curchar == '<') {
                     finish = true;
                     break;
                 }
@@ -948,7 +948,7 @@ HTMLTokenizer::State HTMLTokenizer::parseTag(SegmentedString &src, State state)
                 // If we encounter a "/" when scanning an attribute name, treat it as a delimiter.  However, we only do
                 // this if we have a non-empty attribute name.  This allows the degenerate case of <input type=checkbox checked/>
                 // to work (despite it being utterly invalid).
-                if (curchar <= '>' && (curchar >= '=' || curchar <= ' ' || (curchar == '/' && attrName.length() > 0))) {
+                if (curchar <= '>' && (curchar >= '<' || curchar <= ' ' || (curchar == '/' && attrName.length() > 0))) {
                     cBuffer[cBufferPos] = '\0';
                     attrName = AtomicString(cBuffer);
                     dest = buffer;
